--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -6,6 +6,7 @@
 
 @font-face {
     font-family: 'sans-serif';
+    font-weight: 300;
     src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap'),
   }  
   
