--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
-html {
-    -webkit-font-smoothing: antialiased;
+.inner-shadow {
+    background-image: linear-gradient(180deg, transparent, #333);
+}
+
+.translate-middle-x {
+    transform: translateX(-50%);
 }
